--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ author:
   name             : "Ashhadul Islam"
   pronouns         : # example: "she/her"  
   bio              : "Harnessing AI to bridge visionary innovation with real-world impact."
-  location         : "Doha, Qatar"
-  employer         : "Hamad Bin Khalifa University"
+  location         : "Stockholm, Sweden"
+  employer         : "KTH Royal Institute Of Technology"
   uri              : # URL
-  email            : "asislam@hbku.edu.qa" 
+  email            : "ashhadul.islam@scilifelab.se" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
